Fix layout and horizontal scrollable tables
mend

--- a/src/Elastic.Markdown/Assets/markdown/table.css
+++ b/src/Elastic.Markdown/Assets/markdown/table.css
@@ -1,24 +1,27 @@
 @layer components {
 	.table-wrapper {
 
-		@apply max-w-full overflow-x-scroll my-4;
+		@apply w-full overflow-x-auto my-4;
 
 		table {
-			@apply w-full border-collapse border-1 border-grey-20;
+			@apply w-full border-collapse border-1 border-grey-30;
 		}
 		
 		th, td {
-			@apply py-2 px-4 min-w-30 not-first:border-l-1 border-grey-20;
+			@apply py-2 px-4 min-w-30 not-first:border-l-1 border-grey-30;
 		}
 		
 		thead {
 			@apply font-sans font-semibold text-left align-top border-b-1 border-grey-20 bg-grey-10;
+			:empty {
+				display: none;
+			}
 		}
 		
 		tbody {
 			@apply align-top;
 			tr {
-				@apply not-last:border-b-1 border-grey-20 hover:bg-grey-10;
+				@apply not-last:border-b-1 border-grey-30 hover:bg-grey-10;
 			}
 		}
 	}
